Menu de la izquierda rectificado

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -23,16 +23,18 @@
 
 
             <li ui-sref-active="active">
-                <a ui-sref="layouts"><i class="fa fa-th-large"></i> <span class="nav-label">Calendario</span> </a>
+                <a ui-sref="layouts"><i class="fa fa-table"></i> <span class="nav-label">Calendario</span> </a>
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="layouts"><i class="fa fa-th-large"></i> <span class="nav-label">Chat</span> </a>
+                <a ui-sref="layouts"><i class="fa fa-edit"></i> <span class="nav-label">Citas</span> </a>
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="layouts"><i class="fa fa-th-large"></i> <span class="nav-label">Mensajes</span> </a>
+                <a ui-sref="layouts"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
             </li>
+
+            
         </ul>
 
     </div>
