Adaptación de calendario

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -23,7 +23,7 @@
 
 
             <li ui-sref-active="active">
-                <a ui-sref="layouts"><i class="fa fa-table"></i> <span class="nav-label">Calendario</span> </a>
+                <a ui-sref="app.calendar"><i class="fa fa-table"></i> <span class="nav-label">Calendario</span> </a>
             </li>
 
             <li ui-sref-active="active">
@@ -33,6 +33,9 @@
             <li ui-sref-active="active">
                 <a ui-sref="layouts"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
             </li>
+
+            
+
 
             
         </ul>
