Pantalla de chat

--- a/views/chat_view.html
+++ b/views/chat_view.html
@@ -1,17 +1,7 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Chat view</h2>
-        <ol class="breadcrumb">
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a>Miscellaneous</a>
-            </li>
-            <li class="active">
-                <strong>Chat view</strong>
-            </li>
-        </ol>
+        <h2>Chats</h2>
+        
     </div>
     <div class="col-lg-2">
 
@@ -24,8 +14,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-content">
 
-                    <strong>Chat room </strong> can be used to create chat room in your app.
-                    You can also use a small chat in the right corner to provide live discussion.
+                    <strong>Mensajes de aviso </strong> área reservada para cualquier tipo de notificación instantánea.
 
                 </div>
             </div>
@@ -37,8 +26,8 @@
             <div class="ibox chat-view">
 
                 <div class="ibox-title">
-                    <small class="pull-right text-muted">Last message:  Mon Jan 26 2015 - 18:39:23</small>
-                    Chat room panel
+                    <small class="pull-right text-muted">Último mensaje:  Lun Ene 26 2015 - 18:39:23</small>
+                    Panel de chats
                 </div>
 
                 <div class="ibox-content">
@@ -168,7 +157,7 @@
 
                                 <div class="form-group">
 
-                                    <textarea class="form-control message-input" name="message" placeholder="Enter message text"></textarea>
+                                    <textarea class="form-control message-input" name="message" placeholder="Escribe aquí tu mensaje"></textarea>
                                 </div>
 
                             </div>
@@ -257,7 +246,7 @@
     </div>
     <div class="form-chat">
         <div class="input-group input-group-sm"><input type="text" class="form-control"> <span class="input-group-btn"> <button
-                class="btn btn-primary" type="button">Send
+                class="btn btn-primary" type="button">Enviar
         </button> </span></div>
     </div>
 
