--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -31,12 +31,10 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="layouts"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
+                <a ui-sref="miscellaneous.chat_view"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
             </li>
 
             
-
-
             
         </ul>
 
