--- a/views/calendar.html
+++ b/views/calendar.html
@@ -23,6 +23,7 @@
                 </div>
                 <div class="ibox-content">
                     
+                    Formulario para la creación de nueva cita
                     
                 </div>
             </div>
