--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -27,7 +27,7 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="layouts"><i class="fa fa-edit"></i> <span class="nav-label">Citas</span> </a>
+                <a ui-sref="app.clients"><i class="fa fa-edit"></i> <span class="nav-label">Citas</span> </a>
             </li>
 
             <li ui-sref-active="active">
@@ -35,7 +35,7 @@
             </li>
 
             
-            
+
         </ul>
 
     </div>
