Pantalla de citas

--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -1,4 +1,11 @@
+
+
 <nav class="navbar-default navbar-static-side" role="navigation">
+    
+    <div class="logo-container">
+        <img class="logo-column" src="/img/logo.png" >
+    </div>
+
     <div class="sidebar-collapse">
         <ul side-navigation class="nav metismenu" id="side-menu">
             <li class="nav-header">
