--- a/views/common/topnavbar.html
+++ b/views/common/topnavbar.html
@@ -4,7 +4,7 @@
         <ul class="nav navbar-top-links navbar-right">
             <li>
                 <a ui-sref="login">
-                    <i class="fa fa-sign-out"></i> Log out
+                    <i class="fa fa-sign-out"></i> Desconectar
                 </a>
             </li>
             
