--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -38,7 +38,7 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="miscellaneous.chat_view"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
+                <a ui-sref="app.chats"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
             </li>
 
             
