--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -34,7 +34,7 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="app.clients"><i class="fa fa-edit"></i> <span class="nav-label">Citas</span> </a>
+                <a ui-sref="app.meetings"><i class="fa fa-edit"></i> <span class="nav-label">Citas</span> </a>
             </li>
 
             <li ui-sref-active="active">
