Sigo con el campo datetime

--- a/views/meetings_new.html
+++ b/views/meetings_new.html
@@ -41,7 +41,7 @@
                             <div class="col-lg-10">
                                 <div class="input-group date">
                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                    <input type="datetime" class="form-control" date-time view="date" auto-close="true" min-view="date" format="YYYY-MM-DD">
+                                    <input type="datetime" class="form-control" date-time >
                                 </div>
                             </div>
                         </div>
