--- a/views/meetings_new.html
+++ b/views/meetings_new.html
@@ -41,24 +41,64 @@
                             <div class="col-lg-10">
                                 <div class="input-group date">
                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                    <input type="datetime" class="form-control" date-time >
+                                    <input type="datetime" class="form-control" date-time ng-model="sampleDate" view="date" auto-close="true" min-view="date" format="DD-MM-YYYY">
                                 </div>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-2 control-label">Email</label>
+                            <label class="col-lg-2 control-label">Hora</label>
                             <div class="col-lg-10">
-                                <input type="email" placeholder="Email" class="form-control">
+
+                                <div class="input-group clockpicker" data-autoclose="true">
+                                    <span class="input-group-addon"><span class="fa fa-clock-o"></span></span>
+                                    <input type="text" class="form-control" value="09:30">
+                                </div>
+
+
+                            </div>
+                        </div>
+
+
+
+
+
+
+                        <div class="form-group">
+                            <label class="col-lg-2 control-label">Ubicación</label>
+                            <div class="col-lg-10">
+                                <select class="form-control">
+                                    <option>Seleccione ubicación</option>
+                                    <option>Sala 1</option>
+                                    <option>Sala 2</option>
+                                    <option>Sala 3</option>
+                                    <option>Sala 4</option>
+                                </select>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-lg-2 control-label">Password</label>
+                            <label class="col-lg-2 control-label">Cliente</label>
                             <div class="col-lg-10">
-                                <input type="password" placeholder="Password" class="form-control">
+                                <input type="text" placeholder="Cliente" class="form-control">
                             </div>
                         </div>
+
+                        <div class="form-group">
+                            <label class="col-lg-2 control-label">Asunto</label>
+                            <div class="col-lg-10">
+                                <input type="text" placeholder="Asunto" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-lg-2 control-label">Descripción</label>
+                            <div class="col-lg-10">
+                                <textarea class="form-control" placeholder="Descripción"></textarea>
+                            </div>
+                        </div>
+
+                        
 
                         <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10 pull-right">
@@ -86,3 +126,11 @@
 
     </div>
 </div>
+
+<script>
+    
+    $(function(){
+        $('.clockpicker').clockpicker();
+    });
+
+</script>
