Selector de salas tuneado

--- a/views/meetings_new.html
+++ b/views/meetings_new.html
@@ -67,7 +67,7 @@
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Ubicación</label>
                             <div class="col-lg-10">
-                                <select class="form-control">
+                                <select chosen class="form-control">
                                     <option>Seleccione ubicación</option>
                                     <option>Sala 1</option>
                                     <option>Sala 2</option>
