--- a/views/meetings_new.html
+++ b/views/meetings_new.html
@@ -80,7 +80,13 @@
                         <div class="form-group">
                             <label class="col-lg-2 control-label">Cliente</label>
                             <div class="col-lg-10">
-                                <input type="text" placeholder="Cliente" class="form-control">
+                                <select chosen class="form-control">
+                                    <option>Seleccione cliente</option>
+                                    <option>Cliente 1</option>
+                                    <option>Cliente 2</option>
+                                    <option>Cliente 3</option>
+                                    <option>Cliente 4</option>
+                                </select>
                             </div>
                         </div>
 
