Formulario de nueva cita como una directiva reutilizable

--- a/views/calendar.html
+++ b/views/calendar.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="ibox-content">
                     
-                    Formulario para la creación de nueva cita
+                    <new-meeting-form></new-meeting-form>
                     
                 </div>
             </div>
