--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -42,7 +42,7 @@
             </li>
 
             <li ui-sref-active="active">
-                <a ui-sref="app.chats"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
+                <a ui-sref="chats.index"><i class="fa fa-laptop"></i> <span class="nav-label">Chat</span> </a>
             </li>
 
             
