--- a/views/meetings.html
+++ b/views/meetings.html
@@ -58,11 +58,11 @@
 
                                         <tr ng-repeat="item in vm.items">
                                             <td><input type="checkbox"></td>
-                                            <td class="client-avatar"><img alt="image" src="{{item.photo}}"> </td>
-                                            <td><a class="client-link">{{item.name}} {{item.lastName}}</a><br/><small>{{item.comments}}</small></td>
+                                            <td class="client-avatar"><img alt="image" src="{{item.client.photo}}"> </td>
+                                            <td><a class="client-link">{{item.client.name}} {{item.client.lastName}}</a><br/><small>{{item.comments}}</small></td>
                                             <td>{{item.date}}</td>
                                             <td>{{item.time}}</td>
-                                            <td>{{item.contact}}</td>
+                                            <td>{{item.client.contact}}</td>
                                             <td>
 
                                                 <button type="button" class="btn btn-w-m btn-success"><i class="fa fa-check"></i> Asignar cita</button>
