--- a/views/chat_view.html
+++ b/views/chat_view.html
@@ -20,13 +20,13 @@
     </div>
 </div>
 
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content animated fadeInRight" ng-controller="ChatViewCtrl as vm">
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
                     <span class="text-muted small pull-right">  </span>
-                    <h2>Conversando con: Carles Fernández</h2>
+                    <h2>Conversando con: {{vm.chat.client.name}} {{vm.chat.client.lastName}}</h2>
                 </div>
 
                 <div class="ibox-content">
@@ -61,94 +61,39 @@
 
                         <div class="col-md-9 ">
                             <div class="chat-discussion">
-
-
                                 <messages-list></messages-list>
-                                
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-3">
+                            <div class="chat-users">
 
-                                <div class="chat-message left">
-                                    <img class="message-avatar" src="img/a1.jpg" alt="" >
-                                    <div class="message">
-                                        <a class="message-author" href="#"> Michael Smith </a>
-                                        <span class="message-date"> Mon Jan 26 2015 - 18:39:23 </span>
-                                        <span class="message-content">
-                                           Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                       </span>
-                                   </div>
-                               </div>
-                               <div class="chat-message right">
-                                <img class="message-avatar" src="img/a4.jpg" alt="" >
-                                <div class="message">
-                                    <a class="message-author" href="#"> Karl Jordan </a>
-                                    <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
-                                    <span class="message-content">
-                                       Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover.
-                                   </span>
-                               </div>
-                           </div>
-                           <div class="chat-message left">
-                            <img class="message-avatar" src="img/a2.jpg" alt="" >
-                            <div class="message">
-                                <a class="message-author" href="#"> Michael Smith </a>
-                                <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
-                                <span class="message-content">
-                                   There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
-                               </span>
-                           </div>
-                       </div>
-                       <div class="chat-message right">
-                        <img class="message-avatar" src="img/a5.jpg" alt="" >
-                        <div class="message">
-                            <a class="message-author" href="#"> Alice Jordan </a>
-                            <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
-                            <span class="message-content">
-                               All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
-                               It uses a dictionary of over 200 Latin words.
-                           </span>
-                       </div>
-                   </div>
-                   <div class="chat-message left">
-                    <img class="message-avatar" src="img/a6.jpg" alt="" >
-                    <div class="message">
-                        <a class="message-author" href="#"> Mark Smith </a>
-                        <span class="message-date">  Fri Jan 25 2015 - 11:12:36 </span>
-                        <span class="message-content">
-                           All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
-                           It uses a dictionary of over 200 Latin words.
-                       </span>
-                   </div>
-               </div>
-           </div>
-       </div>
-       <div class="col-md-3">
-        <div class="chat-users">
+                                <managers-list></managers-list>
 
-            <managers-list></managers-list>
+                            </div>
+                        </div>
 
-        </div>
-    </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="chat-message-form">
 
-</div>
-<div class="row">
-    <div class="col-lg-12">
-        <div class="chat-message-form">
+                                <div class="form-group">
 
-            <div class="form-group">
+                                    <textarea class="form-control message-input" name="message" placeholder="Escribe aquí tu mensaje"></textarea>
+                                </div>
 
-                <textarea class="form-control message-input" name="message" placeholder="Escribe aquí tu mensaje"></textarea>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
             </div>
-
         </div>
+
     </div>
-</div>
-
-
-</div>
-
-</div>
-</div>
-
-</div>
 
 
 </div>
